change output location

--- a/ImageUpscale.ipynb
+++ b/ImageUpscale.ipynb
@@ -149,7 +149,7 @@
     "        filter /= np.sum(filter)\n",
     "        for c in range(3):\n",
     "            img_up[i, j, c] = np.sum(img_interp[y1:y2, x1:x2, c] * filter)\n",
-    "cv2.imwrite('out.jpg', img_up)\n",
+    "cv2.imwrite('out/out.jpg', img_up)\n",
     "plt.imshow(img_up)"
    ],
    "id": "6e0ba6e7ce3ff04c",
